# metacoq-introspector

./: Makefile  Makefile.coq  Makefile.coq.conf  Readme.md  _CoqProject  introspector.opam
coq/Introspector/: Introspector.v
